# juro

./: .gitignore  CMakeLists.txt  README.md
include/juro/: factories.hpp  helpers.hpp  promise.hpp
include/juro/compose/: all.hpp  race.hpp
test/: CMakeLists.txt
test/include/: helpers.hpp
test/src/: test.cpp
